Alignment solved

--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -7,6 +7,7 @@
 
 ul {
   list-style: none;
+  padding-left: 0;
 }
 
 .footer-col h4 {
